--- a/Actividades/Act_Invent_UD2/css/archivo.css
+++ b/Actividades/Act_Invent_UD2/css/archivo.css
@@ -1,6 +1,5 @@
 body {
     font-family: Arial, sans-serif;
-    background: #f5f5f5;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -10,23 +9,18 @@ body {
 }
 
 .card {
-    background: white;
     width: 300px;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    transition: transform 0.2s;
-
+    border: 2px solid #383838; 
 }
 
 .card img {
     width: 100%;
     height: 300px;
-    object-fit: cover;
 }
 
 .card-content {
     padding: 16px;
+    background-color: #c5c4c1;
 }
 
 .card-content h3 {
@@ -34,6 +28,6 @@ body {
 }
 
 .card-content p {
-    color: #555;
+    color: #383838;
     font-size: 14px;
 }
